@@ -13,59 +13,63 @@ UT_FUNC(XDGPathTest, "Test XDG paths")
 	puts(" *** XDGPathTest mess with some environment variables that are probably");
 	puts(" *** used by the current environment. Maybe strange things can be occured later");
 
-	UT_VERIFY( STR_EQUAL(user_config_dir(), "~/.config/ede") );
-	UT_VERIFY( STR_EQUAL(user_data_dir(), "~/.local/share/ede") );
-	UT_VERIFY( STR_EQUAL(user_cache_dir(), "~/.cache/ede") );
+	UT_VERIFY( STR_EQUAL(user_config_dir(), "~/.config") );
+	UT_VERIFY( STR_EQUAL(user_data_dir(), "~/.local/share") );
+	UT_VERIFY( STR_EQUAL(user_cache_dir(), "~/.cache") );
 
 	setenv("XDG_CONFIG_HOME", "/dummy/place", 1);
-	UT_VERIFY( STR_EQUAL(user_config_dir(), "/dummy/place/ede") );
+	UT_VERIFY( STR_EQUAL(user_config_dir(), "/dummy/place") );
 
 	setenv("XDG_CONFIG_HOME", "", 1);
-	UT_VERIFY( STR_EQUAL(user_config_dir(), "~/.config/ede") );
+	UT_VERIFY( STR_EQUAL(user_config_dir(), "~/.config") );
 	unsetenv("XDG_CONFIG_HOME");
 
 	setenv("EDE_CONFIG_HOME", "/dummy/place/with/slash/", 1);
-	UT_VERIFY( STR_EQUAL(user_config_dir(), "/dummy/place/with/slash/ede") );
+	UT_VERIFY( STR_EQUAL(user_config_dir(), "/dummy/place/with/slash") );
 	unsetenv("EDE_CONFIG_HOME");
 
 	setenv("XDG_DATA_HOME", "", 1);
-	UT_VERIFY( STR_EQUAL(user_data_dir(), "~/.local/share/ede") );
+	UT_VERIFY( STR_EQUAL(user_data_dir(), "~/.local/share") );
 
 	setenv("XDG_DATA_HOME", "/", 1);
-	UT_VERIFY( STR_EQUAL(user_data_dir(), "/ede") );
+	UT_VERIFY( STR_EQUAL(user_data_dir(), "/") );
 
 	setenv("XDG_DATA_HOME", "/baz", 1);
-	UT_VERIFY( STR_EQUAL(user_data_dir(), "/baz/ede") );
+	UT_VERIFY( STR_EQUAL(user_data_dir(), "/baz") );
 	unsetenv("XDG_DATA_HOME");
 
 	setenv("EDE_DATA_HOME", "", 1);
-	UT_VERIFY( STR_EQUAL(user_data_dir(), "~/.local/share/ede") );
+	UT_VERIFY( STR_EQUAL(user_data_dir(), "~/.local/share") );
 
 	setenv("EDE_DATA_HOME", "/", 1);
-	UT_VERIFY( STR_EQUAL(user_data_dir(), "/ede") );
+	UT_VERIFY( STR_EQUAL(user_data_dir(), "/") );
 
 	setenv("EDE_DATA_HOME", "/baz", 1);
-	UT_VERIFY( STR_EQUAL(user_data_dir(), "/baz/ede") );
+	UT_VERIFY( STR_EQUAL(user_data_dir(), "/baz") );
 	unsetenv("EDE_DATA_HOME");
 
 	setenv("XDG_CACHE_HOME", "", 1);
-	UT_VERIFY( STR_EQUAL(user_cache_dir(), "~/.cache/ede") );
+	UT_VERIFY( STR_EQUAL(user_cache_dir(), "~/.cache") );
 
 	setenv("XDG_CACHE_HOME", "/", 1);
-	UT_VERIFY( STR_EQUAL(user_cache_dir(), "/ede") );
+	UT_VERIFY( STR_EQUAL(user_cache_dir(), "/") );
 
 	setenv("XDG_CACHE_HOME", "/home/foo", 1);
-	UT_VERIFY( STR_EQUAL(user_cache_dir(), "/home/foo/ede") );
+	UT_VERIFY( STR_EQUAL(user_cache_dir(), "/home/foo") );
+	unsetenv("XDG_CACHE_HOME");
+
+	setenv("XDG_CACHE_HOME", "/home/foo/withslash/", 1);
+	UT_VERIFY( STR_EQUAL(user_cache_dir(), "/home/foo/withslash") );
 	unsetenv("XDG_CACHE_HOME");
 
 	setenv("EDE_CACHE_HOME", "", 1);
-	UT_VERIFY( STR_EQUAL(user_cache_dir(), "~/.cache/ede") );
+	UT_VERIFY( STR_EQUAL(user_cache_dir(), "~/.cache") );
 
 	setenv("EDE_CACHE_HOME", "/", 1);
-	UT_VERIFY( STR_EQUAL(user_cache_dir(), "/ede") );
+	UT_VERIFY( STR_EQUAL(user_cache_dir(), "/") );
 
 	setenv("EDE_CACHE_HOME", "/home/foo", 1);
-	UT_VERIFY( STR_EQUAL(user_cache_dir(), "/home/foo/ede") );
+	UT_VERIFY( STR_EQUAL(user_cache_dir(), "/home/foo") );
 	unsetenv("EDE_CACHE_HOME");
 
 	vector<String> lst;
